src/main/java/asn/aosamesan/newfunctionbuilder/parser/FunctionBuilderParserParser.java
// Generated from /Users/aosamesan/IdeaProjects/new-function-builder/src/main/java/asn/aosamesan/newfunctionbuilder/parser/FunctionBuilderParser.g4 by ANTLR 4.9.1
package asn.aosamesan.newfunctionbuilder.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class FunctionBuilderParserParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, NUMERICS=9, 
		CONSTANTS=10, VARIABLE=11, LPAREN=12, RPAREN=13, LMPAREN=14, RMPAREN=15, 
		PLUS=16, MINUS=17, MULTIPLY=18, DIVIDE=19, MODULUS=20, PERCENT=21, HAT=22, 
		TRIGONOMETRIC_FUNCTIONS=23, HYPERBOLIC_FUNCTIONS=24, WS=25;
	public static final int
		RULE_start = 0, RULE_modulus = 1, RULE_addition = 2, RULE_multiplication = 3, 
		RULE_multiplicationWithoutOp = 4, RULE_signedPower = 5, RULE_power = 6, 
		RULE_signedFunction = 7, RULE_function = 8, RULE_signedAtom = 9, RULE_scalarProduct = 10, 
		RULE_atom = 11, RULE_number = 12, RULE_numeric = 13, RULE_constant = 14, 
		RULE_variable = 15, RULE_prefixFunctionName = 16, RULE_prefixFunctionPower = 17, 
		RULE_postfixFunctionName = 18, RULE_logarithmicFunctionName = 19, RULE_exponentialFunctionName = 20, 
		RULE_irrationalFunctionName = 21, RULE_gammaFunctionName = 22, RULE_trigonometricFunctionName = 23, 
		RULE_hyperbolicFunctionName = 24, RULE_factorialFunctionName = 25;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "modulus", "addition", "multiplication", "multiplicationWithoutOp", 
			"signedPower", "power", "signedFunction", "function", "signedAtom", "scalarProduct", 
			"atom", "number", "numeric", "constant", "variable", "prefixFunctionName", 
			"prefixFunctionPower", "postfixFunctionName", "logarithmicFunctionName", 
			"exponentialFunctionName", "irrationalFunctionName", "gammaFunctionName", 
			"trigonometricFunctionName", "hyperbolicFunctionName", "factorialFunctionName"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'log'", "'ln'", "'exp'", "'sqrt'", "'\u221A'", "'gamma'", "'\u0393'", 
			"'!'", null, null, "'x'", "'('", "')'", "'{'", "'}'", "'+'", "'-'", null, 
			null, "'mod'", "'%'", "'^'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, "NUMERICS", "CONSTANTS", 
			"VARIABLE", "LPAREN", "RPAREN", "LMPAREN", "RMPAREN", "PLUS", "MINUS", 
			"MULTIPLY", "DIVIDE", "MODULUS", "PERCENT", "HAT", "TRIGONOMETRIC_FUNCTIONS", 
			"HYPERBOLIC_FUNCTIONS", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FunctionBuilderParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FunctionBuilderParserParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public ModulusContext modulus() {
			return getRuleContext(ModulusContext.class,0);
		}
		public TerminalNode EOF() { return getToken(FunctionBuilderParserParser.EOF, 0); }
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionBuilderParserListener ) ((FunctionBuilderParserListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionBuilderParserListener ) ((FunctionBuilderParserListener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			modulus(0);
			setState(53);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModulusContext extends ParserRuleContext {
		public Token op;
		public AdditionContext addition() {
			return getRuleContext(AdditionContext.class,0);
		}
		public List<ModulusContext> modulus() {
			return getRuleContexts(ModulusContext.class);
		}
		public ModulusContext modulus(int i) {
			return getRuleContext(ModulusContext.class,i);
		}
		public TerminalNode MODULUS() { return getToken(FunctionBuilderParserParser.MODULUS, 0); }
		public TerminalNode PERCENT() { return getToken(FunctionBuilderParserParser.PERCENT, 0); }
		public ModulusContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_modulus; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionBuilderParserListener ) ((FunctionBuilderParserListener)listener).enterModulus(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionBuilderParserListener ) ((FunctionBuilderParserListener)listener).exitModulus(this);
		}
	}

	public final ModulusContext modulus() throws RecognitionException {
		return modulus(0);
	}

	private ModulusContext modulus(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ModulusContext _localctx = new ModulusContext(_ctx, _parentState);
		ModulusContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_modulus, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(56);
			addition(0);
			}
			_ctx.stop = _input.LT(-1);
			setState(63);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ModulusContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_modulus);
					setState(58);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(59);
					((ModulusContext)_localctx).op = _input.LT(1);
					_la = _input.LA(1);
					if ( !(_la==MODULUS || _la==PERCENT) ) {
						((ModulusContext)_localctx).op = (Token)_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					setState(60);
					modulus(2);
					}
					} 
				}
				setState(65);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class AdditionContext extends ParserRuleContext {
		public Token op;
		public MultiplicationContext multiplication() {
			return getRuleContext(MultiplicationContext.class,0);
		}
		public List<AdditionContext> addition() {
			return getRuleContexts(AdditionContext.class);
		}
		public AdditionContext addition(int i) {
			return getRuleContext(AdditionContext.class,i);
		}
		public TerminalNode PLUS() { return getToken(FunctionBuilderParserParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(FunctionBuilderParserParser.MINUS, 0); }
		public AdditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_addition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionBuilderParserListener ) ((FunctionBuilderParserListener)listener).enterAddition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionBuilderParserListener ) ((FunctionBuilderParserListener)listener).exitAddition(this);
		}
	}

	public final AdditionContext addition() throws RecognitionException {
		return addition(0);
	}

	private AdditionContext addition(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		AdditionContext _localctx = new AdditionContext(_ctx, _parentState);
		AdditionContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_addition, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(67);
			multiplication(0);
			}
			_ctx.stop = _input.LT(-1);
			setState(74);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new AdditionContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_addition);
					setState(69);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(70);
					((AdditionContext)_localctx).op = _input.LT(1);
					_la = _input.LA(1);
					if ( !(_la==PLUS || _la==MINUS) ) {
						((AdditionContext)_localctx).op = (Token)_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					setState(71);
					addition(2);
					}
					} 
				}
				setState(76);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class MultiplicationContext extends ParserRuleContext {
		public Token op;
		public MultiplicationWithoutOpContext multiplicationWithoutOp() {
			return getRuleContext(MultiplicationWithoutOpContext.class,0);
		}
		public List<MultiplicationContext> multiplication() {
			return getRuleContexts(MultiplicationContext.class);
		}
		public MultiplicationContext multiplication(int i) {
			return getRuleContext(MultiplicationContext.class,i);
		}
		public TerminalNode MULTIPLY() { return getToken(FunctionBuilderParserParser.MULTIPLY, 0); }
		public TerminalNode DIVIDE() { return getToken(FunctionBuilderParserParser.DIVIDE, 0); }
		public MultiplicationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multiplication; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionBuilderParserListener ) ((FunctionBuilderParserListener)listener).enterMultiplication(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionBuilderParserListener ) ((FunctionBuilderParserListener)listener).exitMultiplication(this);
		}
	}

	public final MultiplicationContext multiplication() throws RecognitionException {
		return multiplication(0);
	}

	private MultiplicationContext multiplication(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		MultiplicationContext _localctx = new MultiplicationContext(_ctx, _parentState);
		MultiplicationContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_multiplication, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(78);
			multiplicationWithoutOp();
			}
			_ctx.stop = _input.LT(-1);
			setState(85);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new MultiplicationContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_multiplication);
					setState(80);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(81);
					((MultiplicationContext)_localctx).op = _input.LT(1);
					_la = _input.LA(1);
					if ( !(_la==MULTIPLY || _la==DIVIDE) ) {
						((MultiplicationContext)_localctx).op = (Token)_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					setState(82);
					multiplication(2);
					}
					} 
				}
				setState(87);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class MultiplicationWithoutOpContext extends ParserRuleContext {
		public MultiplicationWithoutOpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multiplicationWithoutOp; }
	 
		public MultiplicationWithoutOpContext() { }
		public void copyFrom(MultiplicationWithoutOpContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class PowerOnlyContext extends MultiplicationWithoutOpContext {
		public SignedPowerContext signedPower() {
			return getRuleContext(SignedPowerContext.class,0);
		}
		public PowerOnlyContext(MultiplicationWithoutOpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionBuilderParserListener ) ((FunctionBuilderParserListener)listener).enterPowerOnly(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionBuilderParserListener ) ((FunctionBuilderParserListener)listener).exitPowerOnly(this);
		}
	}
	public static class WithoutOpContext extends MultiplicationWithoutOpContext {
		public SignedPowerContext signedPower() {
			return getRuleContext(SignedPowerContext.class,0);
		}
		public MultiplicationWithoutOpContext multiplicationWithoutOp() {
			return getRuleContext(MultiplicationWithoutOpContext.class,0);
		}
		public WithoutOpContext(MultiplicationWithoutOpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionBuilderParserListener ) ((FunctionBuilderParserListener)listener).enterWithoutOp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionBuilderParserListener ) ((FunctionBuilderParserListener)listener).exitWithoutOp(this);
		}
	}

	public final MultiplicationWithoutOpContext multiplicationWithoutOp() throws RecognitionException {
		MultiplicationWithoutOpContext _localctx = new MultiplicationWithoutOpContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_multiplicationWithoutOp);
		try {
			setState(92);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new PowerOnlyContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(88);
				signedPower();
				}
				break;
			case 2:
				_localctx = new WithoutOpContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(89);
				signedPower();
				setState(90);
				multiplicationWithoutOp();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SignedPowerContext extends ParserRuleContext {
		public Token sign;
		public SignedPowerContext signedPower() {
			return getRuleContext(SignedPowerContext.class,0);
		}
		public TerminalNode PLUS() { return getToken(FunctionBuilderParserParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(FunctionBuilderParserParser.MINUS, 0); }
		public PowerContext power() {
			return getRuleContext(PowerContext.class,0);
		}
		public SignedPowerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_signedPower; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionBuilderParserListener ) ((FunctionBuilderParserListener)listener).enterSignedPower(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionBuilderParserListener ) ((FunctionBuilderParserListener)listener).exitSignedPower(this);
		}
	}

	public final SignedPowerContext signedPower() throws RecognitionException {
		SignedPowerContext _localctx = new SignedPowerContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_signedPower);
		int _la;
		try {
			setState(97);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(94);
				((SignedPowerContext)_localctx).sign = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==PLUS || _la==MINUS) ) {
					((SignedPowerContext)_localctx).sign = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(95);
				signedPower();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(96);
				power(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PowerContext extends ParserRuleContext {
		public Token op;
		public SignedFunctionContext signedFunction() {
			return getRuleContext(SignedFunctionContext.class,0);
		}
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public NumericContext numeric() {
			return getRuleContext(NumericContext.class,0);
		}
		public List<PowerContext> power() {
			return getRuleContexts(PowerContext.class);
		}
		public PowerContext power(int i) {
			return getRuleContext(PowerContext.class,i);
		}
		public TerminalNode HAT() { return getToken(FunctionBuilderParserParser.HAT, 0); }
		public PowerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_power; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionBuilderParserListener ) ((FunctionBuilderParserListener)listener).enterPower(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionBuilderParserListener ) ((FunctionBuilderParserListener)listener).exitPower(this);
		}
	}

	public final PowerContext power() throws RecognitionException {
		return power(0);
	}

	private PowerContext power(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		PowerContext _localctx = new PowerContext(_ctx, _parentState);
		PowerContext _prevctx = _localctx;
		int _startState = 12;
		enterRecursionRule(_localctx, 12, RULE_power, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(100);
				signedFunction();
				}
				break;
			case 2:
				{
				setState(101);
				variable();
				setState(102);
				numeric();
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(111);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new PowerContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_power);
					setState(106);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(107);
					((PowerContext)_localctx).op = match(HAT);
					setState(108);
					power(2);
					}
					} 
				}
				setState(113);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class SignedFunctionContext extends ParserRuleContext {
		public Token sign;
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public SignedFunctionContext signedFunction() {
			return getRuleContext(SignedFunctionContext.class,0);
		}
		public TerminalNode PLUS() { return getToken(FunctionBuilderParserParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(FunctionBuilderParserParser.MINUS, 0); }
		public SignedFunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_signedFunction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionBuilderParserListener ) ((FunctionBuilderParserListener)listener).enterSignedFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionBuilderParserListener ) ((FunctionBuilderParserListener)listener).exitSignedFunction(this);
		}
	}

	public final SignedFunctionContext signedFunction() throws RecognitionException {
		SignedFunctionContext _localctx = new SignedFunctionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_signedFunction);
		int _la;
		try {
			setState(117);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(114);
				function(0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(115);
				((SignedFunctionContext)_localctx).sign = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==PLUS || _la==MINUS) ) {
					((SignedFunctionContext)_localctx).sign = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(116);
				signedFunction();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionContext extends ParserRuleContext {
		public SignedAtomContext signedAtom() {
			return getRuleContext(SignedAtomContext.class,0);
		}
		public PrefixFunctionNameContext prefixFunctionName() {
			return getRuleContext(PrefixFunctionNameContext.class,0);
		}
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public PostfixFunctionNameContext postfixFunctionName() {
			return getRuleContext(PostfixFunctionNameContext.class,0);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionBuilderParserListener ) ((FunctionBuilderParserListener)listener).enterFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionBuilderParserListener ) ((FunctionBuilderParserListener)listener).exitFunction(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		return function(0);
	}

	private FunctionContext function(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		FunctionContext _localctx = new FunctionContext(_ctx, _parentState);
		FunctionContext _prevctx = _localctx;
		int _startState = 16;
		enterRecursionRule(_localctx, 16, RULE_function, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NUMERICS:
			case CONSTANTS:
			case VARIABLE:
			case LPAREN:
			case PLUS:
			case MINUS:
				{
				setState(120);
				signedAtom();
				}
				break;
			case T__0:
			case T__1:
			case T__2:
			case T__3:
			case T__4:
			case T__5:
			case T__6:
			case TRIGONOMETRIC_FUNCTIONS:
			case HYPERBOLIC_FUNCTIONS:
				{
				setState(121);
				prefixFunctionName();
				setState(122);
				function(2);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(130);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new FunctionContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_function);
					setState(126);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(127);
					postfixFunctionName();
					}
					} 
				}
				setState(132);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
